@@ -116,6 +116,10 @@ Bugfixes:
 - Functions with the prefix "nvtx" are now filtered from automatic
   compiler instrumentation, as they are known to cause measurement
   failures when being combined with the CUDA adapter.
+- Reduction of memory consumption when profiling is enabled and OPARI2
+  or OMPT record tasks. Previously, the memory consumption would
+  increase linearly for each created task, causing the measurement to
+  abort when too many were scheduled.
 
 ------------------- Released version 8.4 -----------------------------
 
